[package]
name = "dbstorage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
nix = "0.26.2"
tokio = { version = "1.29.1", features = ["io-util", "sync", "macros", "rt-multi-thread", "fs", "time"] }

[features]
test_replacer = []
