[package]
name = "dbstorage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
futures = "0.3.28"
nix = "0.26.2"
tokio = { version = "1.32", features = ["io-util", "sync", "macros", "rt-multi-thread", "fs", "time"] }

[dev-dependencies]
criterion = "0.4"

# [[bench]]
# name = ""
# harness = false
